# dirsync

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dependencies.txt  settings.yaml  task.md
src/: main.cpp
src/file_list/: file_list.cpp  file_list.hpp
src/found_file/: found_file.cpp  found_file.hpp
src/gui/elements/: blacklist_model_column.cpp  blacklist_model_column.hpp  double_text.cpp  double_text.hpp  file_model_column.cpp  file_model_column.hpp  folder_model_column.cpp  folder_model_column.hpp  list_blacklist.cpp  list_blacklist.hpp  list_file.cpp  list_file.hpp  list_folder.cpp  list_folder.hpp  list_operator.cpp  list_operator.hpp  presets.cpp  presets.hpp  view_model_column.cpp  view_model_column.hpp
src/gui/window/: window.cpp  window.glade  window.hpp
src/variables/: variables.cpp  variables.hpp
src/yaml_worker/: yaml_worker.cpp  yaml_worker.hpp
